# fastapi_practice

./: body.py  data_valid.py  form_practice.py  main.py  pyproject.toml
upload/: login.css  member.css
