[tool.poetry]
name = "fastapi-practice"
version = "0.1.0"
description = ""
authors = ["swenbao <essence.lost.0b@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
